--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The House of Martha
 url: http://www.gutenberg.org/ebooks/18822
